Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1,3 +1,2 @@
-<p><h1>Volkshilfe</hi></p>
-<em> Wir helfen unserem Volk</em>
-<p>wir wollen, dass es ihnen und dem Volk gut geht</p>
+<h1>Schwenti Lore</h1>
+<em>Hier kommen regelmäßige Updates zu Schwenti Lore</em>
