Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1,2 +1,38 @@
 <h1>Schwenti Lore</h1>
 <em>Hier kommen regelmäßige Updates zu Schwenti Lore</em>
+<p>Schwenti Lore
+Schwenti lore chapter 1
+Am anfang von allem herrschten alle Götter gemeinsam. Es lebten noch nicht viele menschen 
+auf dem urzeitplaneten namens atlas. Sie alle waren den göttern treu, außer einer. Ein Mann 
+namens Herbert Schwentenwein war mit der schreckensherrschaft der götter nicht zufrieden, er 
+wollte sie stürzen, doch dafür brauchte er viel Kraft. Er aß die verbotene frucht der nördlichen 
+längstalfurche und hatte nun das gewicht des ganzen multiversums. Danach suchte er einen 
+atlas, aber nicht irgendeinen atlas. Den sigma meal skibidi slicers atlas (smssa), denn durch ihn 
+hatte er unendlich viel wissen. Danach holte er sich horden von schnitzel und reis monstern, alle 
+so groß wie galaxien. Der Krieg zwischen schwenti und den göttern dauerte millionen von Jahren 
+an, und die götter hatten viele verluste, doch schließlich konnte ihenen jesus helfen. Sie legten 
+Schwenti in Ketten, denn er konnte alles essen außer sich selbst, und dort ist er heute noch, 
+doch seine Seele wurde aufgeteilt und lebt immer weiter und der smss atlas ist in unserem 
+Universum
+To be continued…
+Chapter 2
+Rat der Schwentis:
+Albert Schwentenwein: der kluge Kopf
+Multiversum Schwenti: stark, aber dumm
+Harry Schwentenwein: Magie
+Adolf Schwentenwein: taktischer Kriegsführer
+Classic Schwenti: Oberhaupt des Rates
+Der plade Rat
+Die Schwentis hatten die Sitzung in der sie besprochen, wie sie den ursprünglichen Schwenti 
+befreit. Sie kamen zu dem Schluss das sie Schüler konsumieren mussten, um ein Kettenglied zu 
+sprengen. Eine Lernzielkontrolle war so viel Wert wie 10 Schüler und ein Test so viel wie 100.
+So machten sie über Jahrtausende weiter, bis sie den Schüler Matthias Veronik essen wollte. Er 
+war der 2. Dümmste Schüler der Klasse und es würde niemandem auffallen das er fehlte, doch 
+er fand die Schwäche aller Schwentis heraus, das Pfeifen. Doch leider war es beinahe Zeit den 
+ursprünglichen Schwenti zu befreien. Deswegen suche sich Veronik ein Team zusammen, sie 
+nannten es Schwenti Resistance. Es bestand aus 
+Sam Giefing: der klügste
+Jakob Knotzer: Minecraft PVPer
+Xandi: Furz man
+Emi: der konnte nichts
+Mini: der kleine</p>
