Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 jo<h1>Schwenti Lore</h1>
 <em>Hier kommen regelmäßige Updates zu Schwenti Lore</em>
-<p>Schwenti Lore
-Schwenti lore chapter 1
+<p>Schwenti Lore</p>
+<p><h1>Schwenti lore chapter 1</h1></p>
 Am anfang von allem herrschten alle Götter gemeinsam. Es lebten noch nicht viele menschen 
 auf dem urzeitplaneten namens atlas. Sie alle waren den göttern treu, außer einer. Ein Mann 
 namens Herbert Schwentenwein war mit der schreckensherrschaft der götter nicht zufrieden, er 
@@ -15,7 +15,7 @@ Schwenti in Ketten, denn er konnte alles essen außer sich selbst, und dort ist 
 doch seine Seele wurde aufgeteilt und lebt immer weiter und der smss atlas ist in unserem 
 Universum
 To be continued…
-Chapter 2
+<p><h1>Chapter 2</h1></p>
 Rat der Schwentis:
 Albert Schwentenwein: der kluge Kopf
 Multiversum Schwenti: stark, aber dumm
