Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ an, und die götter hatten viele verluste, doch schließlich konnte ihenen jesus
 Schwenti in Ketten, denn er konnte alles essen außer sich selbst, und dort ist er heute noch, 
 doch seine Seele wurde aufgeteilt und lebt immer weiter und der smss atlas ist in unserem 
 Universum
-To be continued…
+<p><h2>To be continued…</h2></p>
 <p><h1>Chapter 2</h1></p>
 Rat der Schwentis:
 Albert Schwentenwein: der kluge Kopf
