Aktualisieren von index.html

--- a/index.html
+++ b/index.html
@@ -1,75 +1,1 @@
-jo<h1>Schwenti Lore</h1>
-<em>Hier kommen regelmäßige Updates zu Schwenti Lore</em>
-<p>Schwenti Lore</p>
-<p><h1>Schwenti lore chapter 1</h1></p>
-Am anfang von allem herrschten alle Götter gemeinsam. Es lebten noch nicht viele menschen 
-auf dem urzeitplaneten namens atlas. Sie alle waren den göttern treu, außer einer. Ein Mann 
-namens Herbert Schwentenwein war mit der schreckensherrschaft der götter nicht zufrieden, er 
-wollte sie stürzen, doch dafür brauchte er viel Kraft. Er aß die verbotene frucht der nördlichen 
-längstalfurche und hatte nun das gewicht des ganzen multiversums. Danach suchte er einen 
-atlas, aber nicht irgendeinen atlas. Den sigma meal skibidi slicers atlas (smssa), denn durch ihn 
-hatte er unendlich viel wissen. Danach holte er sich horden von schnitzel und reis monstern, alle 
-so groß wie galaxien. Der Krieg zwischen schwenti und den göttern dauerte millionen von Jahren 
-an, und die götter hatten viele verluste, doch schließlich konnte ihenen jesus helfen. Sie legten 
-Schwenti in Ketten, denn er konnte alles essen außer sich selbst, und dort ist er heute noch, 
-doch seine Seele wurde aufgeteilt und lebt immer weiter und der smss atlas ist in unserem 
-Universum
-<p><h2>To be continued…</h2></p>
-<p><h1>Chapter 2</h1></p>
-Rat der Schwentis:
-Albert Schwentenwein: der kluge Kopf
-Multiversum Schwenti: stark, aber dumm
-Harry Schwentenwein: Magie
-Adolf Schwentenwein: taktischer Kriegsführer
-Classic Schwenti: Oberhaupt des Rates
-Der plade Rat
-Die Schwentis hatten die Sitzung in der sie besprochen, wie sie den ursprünglichen Schwenti 
-befreit. Sie kamen zu dem Schluss das sie Schüler konsumieren mussten, um ein Kettenglied zu 
-sprengen. Eine Lernzielkontrolle war so viel Wert wie 10 Schüler und ein Test so viel wie 100.
-So machten sie über Jahrtausende weiter, bis sie den Schüler Matthias Veronik essen wollte. Er 
-war der 2. Dümmste Schüler der Klasse und es würde niemandem auffallen das er fehlte, doch 
-er fand die Schwäche aller Schwentis heraus, das Pfeifen. Doch leider war es beinahe Zeit den 
-ursprünglichen Schwenti zu befreien. Deswegen suche sich Veronik ein Team zusammen, sie 
-nannten es Schwenti Resistance. Es bestand aus 
-Sam Giefing: der klügste
-Jakob Knotzer: Minecraft PVPer
-Xandi: Furz man
-Emi: der konnte nichts
-Mini: der kleine</p>
-<p>Sie mussten den rollenden Berg mit dem guten Schwenti darin finden, denn nur ein Schwenti 
-kann den ursprünglichen Schwenti töten. Um diesen Berg sehen zu können musste man 
-mindestens 350kg wiegen. Emilio tat es und starb beinahe dabei, doch er schaffte es.
-Sie mussten sich durch mehrere Prüfungen kämpfen und konnten schließlich mit dem Schwenti 
-Mönch sprechen. Er sagte ihnen das, falls der ursprüngliche Schwenti auch Herberto 
-Schwentenwein zurückkommt, alle Schwentis außer dem Rat und er selbst aufgelößt werden. 
-Emilio bekam sein altes Gewicht zurück und sie bereiteten sich auf den unausweichlichen 
-Untergang vor.
-30 Jahre später…
-Die ÖbeMR war zu einem riesigen Unternehmen aufgestiegen. Sie hatten jetzt Roboter für Emilio 
-Sam Jakob uns Mini und Veronik hatte magische Böller bekommen. Sie hatten auch einiges über 
-die Schwenti Rasse herausgefunden, wie zum Beispiel, dass Dubai ihr zuhause war und es 
-tatsächlich ein Spalt in der Minecraft Dimension war. Im Burji Kahlifa werden immer mehr 
-Schwenti klone hergestellt, die sich nicht auflösen konnten. Nach mehreren Jahren purer 
-Vorbereitung war die Zeit gekommen die Klon Schwentis griffen an. Gemeinsam mit Horden von 
-Schnitzel und Reis Monstern, sie waren alle so hoch wie Hochhäuser. Die ersten Wellen konnten 
-sie gut auffhalten, doch es dauerte nicht lange bis der erste Gegner kam. Albert Schwentenwein 
-forderte Sam heraus. Er und Sam fingen an zu kämpfen. Ein Schild war um Schwenti 
-entstanden. Er lachte und sagte Sam müsse 7 Geo Fragen beantworten, erst dann könnte er ihn 
-wieder angreifen, falls er scheiterte, würde er sterben. 
-Frage 1: erkläre mir den Nationalfeiertag, Sam konnte mühelos antworten
-Frage 2: was ist die Hauptstadt von Chibuti, Sam dachte lange nach, doch dann erinnerte er sich 
-an Dictators: No Peace und konnte antworten
-Frage 3: was sind die Bundesländer von Österreich, Sam konnte antworten
-Frage 4: zähle mir alle Alpenländer auf
-Frage 5: zähle mir alle Donauländer auf
-Frage 6: sage mir alle Gebirgsketten von Österreich
-Sam konnte überall antworten
-Frage 7: sage mir die nördliche Längststalfurche
-Sam musste sehr lange überlegen, doch schließlich konnte er auch diese Frage beantworten. Er 
-explodierte in Schnitzel und Reis. Danach war Sam zurück.
-All die Kämpfe fanden in dem Zeitlosen Schnitzel und Reis Raum statt. Als nächsteskämpfte 
-Xandi gegen den Führer Adolf Schwentenwein. Die beiden mussten einander vergaßen. Es war 
-ein hart umstrittetner Kampf. Adolf benutzte die Tricks, die er einst an Juden angewandt hatte, 
-doch Xandi furzte und schaselte was das Zeug hielt, doch leider konnte er dem Gas nicht 
-standhalten. Er erstickte und die Schwenti Defenders hatten nun ein Mitglied weniger.
-</p>
+<h1>Just got you Phished :)</h1>
